--- a/inf.html
+++ b/inf.html
@@ -41,7 +41,21 @@
 									<span class="image main"><img src="images/pic10.jpg" alt=""/></span>
 									<p>Os cooperadores desse site foram Brayan Charles, Arthur Prado e Ângelo, com a contribuição desses três alunos do curso de TI da escola Etec Maria Cristina Medeiros ou apenas Etec MCM esse site foi possível a partir de uma template de base e depois disso muita programação e alterações juntamente com adições e contradições dentro do planejamento e prazo de entrega.</p>
 									<p>A cooperadora para a parte de revisão e pesquisa das informações do site foi de Anna Beatriz, e com a sua pudemos ter informações do site além das revisões geral do site.</p>
-             <h3>Menção honrosa: Rian</h3>
+
+									<header class="major">
+										<h1>Conteúdo geral</h1>
+									</header>
+									<h4>Sobre a Finalidade e as Informações do Site</h4>
+									<p>O site foi criado com o objetivo de conscientizar as pessoas sobre a existência de diferentes tipos de dependências e como elas afetam o comportamento humano. Nosso grupo escolheu abordar quatro tipos principais de dependência, explicando como cada uma se manifesta e as formas de tratamento disponíveis. O propósito é ajudar os leitores a identificar sinais de dependência, compreender suas características únicas e encontrar caminhos para lidar com essas situações de forma saudável.</p>
+									<p>Através de explicações detalhadas, o site apresenta os seguintes tipos de dependência: em relacionamentos, no ambiente familiar, no ambiente social e em objetos. Cada tipo é abordado de maneira clara, mostrando como podem impactar a vida das pessoas e quais estratégias podem ser utilizadas para superá-los. O objetivo é oferecer informações que promovam reflexões, incentivem o autocuidado e fortaleçam a autonomia individual.</p>
+									<h4>Resumo do Conteúdo Apresentado no Site</h4>
+									<p>As dependências em relacionamentos e no ambiente familiar possuem características distintas. Na dependência em relacionamentos, o indivíduo frequentemente busca segurança emocional em seu parceiro romântico, esperando que a presença constante do outro traga conforto e estabilidade. Esse comportamento pode levar a atitudes possessivas e ao esquecimento de outras áreas da vida, vivendo exclusivamente para a relação. Já na dependência familiar, o indivíduo se apoia em figuras de autoridade, como pais ou cuidadores, buscando neles uma âncora emocional. Isso pode dificultar a independência, gerando uma incapacidade de lidar com desafios sozinho.</p>
+									<p>A dependência no ambiente social envolve a necessidade de validação e aprovação de outras pessoas. Indivíduos com essa dependência costumam basear sua autoestima em como os outros percebem ou reagem ao seu trabalho. Caso não recebam reconhecimento, podem desenvolver insegurança, ter dificuldades para tomar decisões importantes e se tornarem incapazes de realizar projetos ou tarefas sem apoio. Esse comportamento compromete a autonomia e pode levar a problemas de ansiedade e baixa autoestima.</p>
+									<p>Já a dependência em objetos envolve um apego excessivo a itens materiais que se tornam parte essencial da rotina ou fonte de conforto. Por exemplo, o celular pode ser visto como um objeto de segurança, e sua ausência pode causar estresse, ansiedade e até crises emocionais. Se não tratado adequadamente, esse apego pode evoluir para um descontrole emocional, impactando o bem-estar da pessoa e dificultando sua capacidade de viver sem o objeto em questão.</p>
+									<h4>Conclusão</h4>
+									<p>O site destaca que as dependências podem se manifestar de diferentes formas, afetando pessoas de todas as idades e contextos. Compreender essas dependências, sejam elas em relacionamentos, na família, no ambiente social ou em objetos, é essencial para identificar comportamentos prejudiciais e buscar soluções. Cada tipo de dependência exige uma abordagem específica, mas todas compartilham o mesmo princípio: é possível superá-las com o suporte certo e estratégias adequadas. Assim, esperamos que o site sirva como um recurso valioso para educar, alertar e oferecer caminhos para que as pessoas lidem com essas questões, promovendo equilíbrio e bem-estar em suas vidas.</p>
+
+									<h3>Menção honrosa: Rian</h3>
 								</div>
 							</section>
 
