--- a/inf.html
+++ b/inf.html
@@ -41,6 +41,7 @@
 									<span class="image main"><img src="images/pic10.jpg" alt=""/></span>
 									<p>Os cooperadores desse site foram Brayan Charles, Arthur Prado e Ângelo, com a contribuição desses três alunos do curso de TI da escola Etec Maria Cristina Medeiros ou apenas Etec MCM esse site foi possível a partir de uma template de base e depois disso muita programação e alterações juntamente com adições e contradições dentro do planejamento e prazo de entrega.</p>
 									<p>A cooperadora para a parte de revisão e pesquisa das informações do site foi de Anna Beatriz, e com a sua pudemos ter informações do site além das revisões geral do site.</p>
+									<p>A por meia parte revisora e provedora auxiliar de informações foi de Isabele E., que contribui em fazer ma junção completa e resumo do site apresentado. Pode-se encontrar seu trabalho abaixo.</p>
 
 									<header class="major">
 										<h1>Conteúdo geral</h1>
@@ -55,7 +56,10 @@
 									<h4>Conclusão</h4>
 									<p>O site destaca que as dependências podem se manifestar de diferentes formas, afetando pessoas de todas as idades e contextos. Compreender essas dependências, sejam elas em relacionamentos, na família, no ambiente social ou em objetos, é essencial para identificar comportamentos prejudiciais e buscar soluções. Cada tipo de dependência exige uma abordagem específica, mas todas compartilham o mesmo princípio: é possível superá-las com o suporte certo e estratégias adequadas. Assim, esperamos que o site sirva como um recurso valioso para educar, alertar e oferecer caminhos para que as pessoas lidem com essas questões, promovendo equilíbrio e bem-estar em suas vidas.</p>
 
-									<h3>Menção honrosa: Rian</h3>
+
+
+
+                                                                        <h3>Menção honrosa: Rian</h3>
 								</div>
 							</section>
 
@@ -70,6 +74,7 @@
 						<ul class="copyright">
 							<li>&copy; ETEC</li><li>feito por: <a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Arthur Prado, Brayan C. & Ângelo I.</a></li>
 						</li><li>Conteúdo e Revisão por: <a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Anna Beatriz</a></li>
+					</li><li>Auxiliar e  por: <a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Anna Beatriz</a></li>
 						</ul>
 					</div>
 				</footer>
