--- a/inf.html
+++ b/inf.html
@@ -74,7 +74,7 @@
 						<ul class="copyright">
 							<li>&copy; ETEC</li><li>feito por: <a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Arthur Prado, Brayan C. & Ângelo I.</a></li>
 						</li><li>Conteúdo e Revisão por: <a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Anna Beatriz</a></li>
-					</li><li>Auxiliar e  por: <a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Anna Beatriz</a></li>
+					</li><li>Auxiliar e Oraganizadora de Informações: <a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Anna Beatriz</a></li>
 						</ul>
 					</div>
 				</footer>
