--- a/generic.html
+++ b/generic.html
@@ -88,9 +88,9 @@
 							<section>
 								<div class="contact-method">
 									<span class="icon solid alt fa-home"></span>
-									<h3>Address</h3>
+									<h3>Endereço</h3>
 									<span>São Paulo <br />
-									São Paulo, TN 00000<br />
+									Ribeirão Pires, R. Bélgica, 88 - Jd. Alvorada CEP 09402-060<br />
 									Brasil</span>
 								</div>
 							</section>
